--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nanoid": "^3.0.0",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^9.2.0"
   },
   "dependencies": {
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
     "nodemailer": "^7.0.5",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   }
 }
