--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     // File Layout
     "rootDir": "./src",
     "outDir": "./dist",
-
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "esModuleInterop": true,
@@ -13,6 +12,11 @@
     "types": [
       "node"
     ],
+    "paths": {
+      "*": [
+        "./src/utils/types/*"
+      ]
+    },
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
