--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^24.3.0",
     "@types/nodemailer": "^7.0.1",
@@ -23,6 +24,7 @@
     "concurrently": "^9.2.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.879.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -32,6 +34,7 @@
     "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
