--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
+    "socket.io": "^4.5.3",
+    "soket.io": "^0.0.1-security",
     "uuid": "^11.1.0",
     "zod": "^4.0.17"
   }
