--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "google-auth-library": "^10.3.0",
+    "graphql": "^16.11.0",
+    "graphql-http": "^1.22.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
     "multer": "^2.0.2",
